--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [master]
 
 jobs:
-  kaocha:
+  clojure:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -26,3 +26,4 @@ jobs:
         with:
           cli: "1.10.1.739"
       - run: bin/kaocha
+        working-directory: clojure
