--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
         with:
           cli: "1.10.1.739"
       - run: bin/kaocha
-        working-directory: clojure
+        working-directory: clj
