day7, and a bunch of half-written haskell

--- a/hs/hs.cabal
+++ b/hs/hs.cabal
@@ -4,7 +4,7 @@ cabal-version: 2.2
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 29921a9d8d58fc992ef27b201363825c2bb1eb1fc003813364e95a43d7c87d9a
+-- hash: fa0095720f52f40e6e4ff52200d0be2ee459b060ecc44a768120474083fc8e04
 
 name:           hs
 version:        0.0.0
@@ -14,25 +14,23 @@ build-type:     Simple
 
 library
   exposed-modules:
-      Lib
+      Day1
+      Day2
+      Day3
+      Day4
+      Day5
+      Day6
   other-modules:
       Paths_hs
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
-  default-language: Haskell2010
-
-executable hs-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_hs
-  hs-source-dirs:
-      app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      base >=4.7 && <5
-    , hs
+    , combinat
+    , megaparsec
+    , parser-combinators
+    , text
+    , unordered-containers
   default-language: Haskell2010
 
 test-suite hs-test
@@ -45,5 +43,10 @@ test-suite hs-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , combinat
     , hs
+    , megaparsec
+    , parser-combinators
+    , text
+    , unordered-containers
   default-language: Haskell2010
