--- a/hs/package.yaml
+++ b/hs/package.yaml
@@ -3,20 +3,14 @@ license:             WTFPL
 
 dependencies:
 - base >= 4.7 && < 5
+- combinat
+- megaparsec
+- text
+- parser-combinators
+- unordered-containers
 
 library:
   source-dirs: src
-
-executables:
-  hs-exe:
-    main:                Main.hs
-    source-dirs:         app
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - hs
 
 tests:
   hs-test:
