--- a/hs/stack.yaml
+++ b/hs/stack.yaml
@@ -10,7 +10,8 @@
 #
 # resolver: lts-3.5
 # resolver: nightly-2015-09-21
-# resolver: ghc-7.10.2
+# resolver: ghc-8.10.2
+
 #
 # The location of a snapshot can be provided as a file or url. Stack assumes
 # a snapshot provided as a file might change, whereas a url resource does not.
@@ -40,7 +41,11 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
+extra-deps:
+- combinat-0.2.9.0
+- megaparsec-9.0.1
+- parser-combinators-1.2.1
+- unordered-containers-0.2.13.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
