--- a/hs/stack.yaml
+++ b/hs/stack.yaml
@@ -46,6 +46,7 @@ extra-deps:
 - megaparsec-9.0.1
 - parser-combinators-1.2.1
 - unordered-containers-0.2.13.0
+- data-memocombinators-0.5.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
